<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login2">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:onClick="sincronizar"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yemsys2" />


    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:maxLines="1"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="183dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="269dp"
        tools:ignore="MissingConstraints" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="228dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
         app:cardBackgroundColor="@color/yellow"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorRed"
            android:drawableRight="@drawable/ic_candado"
            android:onClick="login"
            android:text="@string/action_sign_in"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,OnClick" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginBottom="1dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.948"
        tools:layout_editor_absoluteX="0dp" />


</androidx.appcompat.widget.LinearLayoutCompat>

